[tool.poetry]
name = "rss-parser"
version = "0.2.0"
description = "Typed pythonic RSS parser"
authors = ["dhvcc <1337kwiz@gmail.com>"]
license = "GPLv3"
keywords = [
    "python",
    "python3",
    "cli",
    "rss",
    "parser",
    "scraper",
    "mit",
    "mit-license",
    "typed",
    "typed-python",
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
"Homepage" = "https://dhvcc.github.io/rss-parser"
"Source" = "https://github.com/dhvcc/rss-parser"
"Bug Tracker" = "https://github.com/dhvcc/rss-parser/issues"

[tool.poetry.dependencies]
python = "^3.7"
bs4 = ">=0.0.1"
pydantic = ">=1.6.1"
lxml = ">=4.5.2"
requests = ">=2.24.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.12.0"
flake8 = "^3.9.0"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
  | venv
  | .venv
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
skip_glob = ['**/.venv/**']
