[tool.poetry]
name = "rss-parser"
version = "2.1.0"
description = "Typed pythonic RSS/Atom parser"
authors = ["dhvcc <1337kwiz@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
keywords = [
    "python",
    "python3",
    "cli",
    "rss",
    "parser",
    "gplv3",
    "typed",
    "typed-python",
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "rss_parser" }, { include = "rss_parser/py.typed" }]


[tool.poetry.urls]
"Homepage" = "https://dhvcc.github.io/rss-parser"
"Source" = "https://github.com/dhvcc/rss-parser"
"Bug Tracker" = "https://github.com/dhvcc/rss-parser/issues"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = ">1.9"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
ipython = "*"
black = "^22.3.0"
pre-commit = "^2.12.0"
ruff = "*"
rich = "*"
pytest = "^7.4.0"
requests = "^2.32.3"

[tool.pytest.ini_options]
addopts = "--color=yes"
testpaths = ["tests"]
log_cli = true
log_level = "INFO"


[tool.black]
line-length = 120
target-version = ["py38"]

[tool.ruff]
line-length = 120
target-version = "py38"
respect-gitignore = true
select = [
    "PL",  # pylint
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "C40", # flake8-comprehensions
    "T10", # flake8-debugger
    "EXE", # flake8-executable
    "T20", # flake8-print
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "RUF", # ruff
]

[tool.ruff.per-file-ignores]
"tests/**.py" = [
    "S101",   # Use of assert detected
    "ARG001", # Unused function argument
    "S311",   # Allow use of random
    "S301",   # Allow use of pickle
]
"**/__init__.py" = ["F401"]
"rss_parser/models/atom/**" = ["A003"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
